Add missing translations

--- a/app/views/notifications_mailer/_ssl_recurrent_failure.en.html.erb
+++ b/app/views/notifications_mailer/_ssl_recurrent_failure.en.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <strong>SSL: <%= check.domain %></strong> (<%= check.consecutive_failures %> erreurs consécutives)
+  <strong>SSL: <%= check.domain %></strong> (<%= check.consecutive_failures %> consecutive errors)
   <br />
 
   <%- if check.domain_expires_at.present? %>
