--- a/app/views/notifications_mailer/_ssl_recurrent_failure.en.text.erb
+++ b/app/views/notifications_mailer/_ssl_recurrent_failure.en.text.erb
@@ -1,4 +1,4 @@
-SSL: <%= check.domain %> (<%= check.consecutive_failures %> erreurs consécutives)
+SSL: <%= check.domain %> (<%= check.consecutive_failures %> consecutive errors)
 <%= "-" * (check.domain.length + "SSL: ".length) %>
 
 <%- if check.domain_expires_at.present? %>
