--- a/app/views/shared/_home_header.html.erb
+++ b/app/views/shared/_home_header.html.erb
@@ -6,8 +6,8 @@
                 <p><%= t(".intro") %></p>
             </div>
             <div class="d-flex flex-wrap justify-content-around align-items-center">
-                <%= link_to "Learn More", root_path(@root, anchor: "description"), :class => "btn btn-primary" %>
-                <%= link_to "Sign Up", new_user_registration_path, :class => "btn btn-tertiary" %>
+                <%= link_to t(".actions.learn_more"), root_path(@root, anchor: "description"), :class => "btn btn-primary" %>
+                <%= link_to t(".actions.sign_up"), new_user_registration_path, :class => "btn btn-tertiary" %>
             </div>
         </div>
     </div>
