--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,10 +1,9 @@
-// Copyright (C) 2018 Colin Darie <colin@darie.eu>, 2018 Evolix <info@evolix.fr>
-// License: GNU AGPL-3+ (see full text in LICENSE file)
-
-@import '_variables';
+@import '_custom';
 @import '~bootstrap/scss/bootstrap';
+
 @import 'layout';
 @import 'icons';
+
 @import 'components/callouts';
 @import 'components/users';
 @import 'components/checks';
