--- a/app/views/checks/_filters.html.erb
+++ b/app/views/checks/_filters.html.erb
@@ -33,7 +33,7 @@
         </div>
 
         <div class="col-auto">
-          <%= link_to Octicons::Octicon.new("x").to_svg.html_safe, checks_path, class: "btn btn-danger btn-sm btn-outline-danger" %>
+          <%= link_to Octicons::Octicon.new("x").to_svg.html_safe, checks_path, class: "btn btn-sm btn-outline-danger" %>
         </div>
       </div>
 
